apps/error-page/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: errorpages
spec:
  selector: {app: errorpages}
  ports:
    - name: http
      port: 80
      targetPort: 80
